CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(glw_json)
ADD_SUBDIRECTORY(gtests)

INCLUDE_DIRECTORIES(${GTEST_SRC_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
ENDIF()

ADD_EXECUTABLE (tests tests.cpp )
ADD_DEPENDENCIES(tests googletest)
ADD_TEST(test1 tests)


