CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
PROJECT(glw_profiler)
ADD_SUBDIRECTORY(gtests)

INCLUDE_DIRECTORIES(${GTEST_SRC_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

ADD_EXECUTABLE (tests tests.cpp )

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x ")
	SET(THREADS_PREFER_PTHREAD_FLAG ON)
	FIND_PACKAGE(Threads REQUIRED)
	TARGET_LINK_LIBRARIES(tests Threads::Threads)
ENDIF()

IF(NOT WIN32)
	SET(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS_DEBUG} --coverage")
	SET(CMAKE_EXE_LINKER_FLAGS_COVERAGE "${CMAKE_EXE_LINKER_FLAGS_DEBUG} --coverage")
	SET(CMAKE_SHARED_LINKER_FLAGS_COVERAGE "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} --coverage")
	MESSAGE("Generating coverage!!")
ENDIF()

ADD_TEST(test1 tests)
ADD_DEPENDENCIES(tests googletest)

ADD_EXECUTABLE(example example.cpp)

INSTALL(TARGETS tests DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../install/)
INSTALL(TARGETS example DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../install/)
